@@ -1,12 +1,12 @@
 local lib = require("__janky-quality__/lib/lib")
 local libq = require("__janky-quality__/lib/quality")
 
-local function all_fluid(recipe_part)
+local function all_forbidden_quality(recipe_part)
     if not recipe_part then
         return False
     end
     for _, item in pairs(recipe_part) do
-        if item.type ~= "fluid" then
+        if not libq.forbids_quality(item.name) then
             return False
         end
     end
@@ -17,7 +17,7 @@ for _, p in pairs(data.raw.recipe) do
     for _, quality in pairs(libq.qualities) do
         if quality.level ~= 1 then
             local new_recipe = libq.copy_prototype(p, quality)
-            if new_recipe.main_product and new_recipe.main_product ~= "" and not data.raw.fluid[new_recipe.main_product] then
+            if new_recipe.main_product and new_recipe.main_product ~= "" and not libq.forbids_quality(new_recipe.main_product) then
                 new_recipe.main_product = libq.name_with_quality(new_recipe.main_product, quality)
             end
 
@@ -26,14 +26,9 @@ for _, p in pairs(data.raw.recipe) do
                     return
                 end
                 for _, part in pairs(parts) do
-                    if part.type == "fluid" then
-                        part.name = libq.name_without_quality(part.name)
-                    elseif part.type == "item" then
-                        part.name = libq.name_with_quality(libq.name_without_quality(part.name), quality)
-                    else
-                        log(serpent.block(p))
-                        log(serpent.block(parts))
-                        error("Invalid recipe")
+                    part.name = libq.name_without_quality(part.name)
+                    if not libq.forbids_quality(part.name) then
+                        part.name = libq.name_with_quality(part.name, quality)
                     end
                 end
             end
@@ -42,7 +37,7 @@ for _, p in pairs(data.raw.recipe) do
             for _, recipe_root in pairs({ new_recipe, new_recipe.normal, new_recipe.expensive }) do
                 if recipe_root then
                     recipe_root.ingredients, recipe_root.results = lib.get_canonic_recipe(recipe_root)
-                    if all_fluid(recipe_root.ingredients) then
+                    if all_forbidden_quality(recipe_root.ingredients) then
                         add_prototype = false
                     end
                     handle_recipe_part(recipe_root.ingredients)
