@@ -5,6 +5,7 @@ Date: ???
     - Recipe unlocks are now organized into hidden technologies
     - Better quality probabilities description
     - Some extra non-SA bonuses
+    - Support for non-quality item filters
   Bug fixes:
     - Support tiles that are minable but return nothing
 ---------------------------------------------------------------------------------------------------
